# wordle

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
examples/: README.md
src/: lib.rs  main.rs
src-py/: main.py
src/app/: menus.rs  mod.rs  run.rs  states.rs
src/app/menus/: basic.rs  game.rs  mod.rs  root.rs  settings.rs
src/app/tactics/: advanced.rs  basic.rs
src/app/validators/: guess_validators.rs  guesses.rs  mod.rs
src/cli/: args.rs  prompt.rs
src/core/: comparison.rs  console.rs  mod.rs  utils.rs
src/display/: basic.rs
src/models/: cli.rs  config.rs  console.rs  menu.rs  mod.rs  response.rs  states.rs
src/setup/: assets.rs  config.rs  config.yml  mod.rs
